--- a/static/statistics.html
+++ b/static/statistics.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="prefetch" href="https://api.snipercallsbot.com/main_gj2s943s.js" />
+    <link rel="prefetch" href="https://api.snipercallsbot.com/main_j29d3jf4.js" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/img/logo.svg" />
     <link rel="stylesheet" href="/styles/style.css" />
@@ -1003,5 +1003,5 @@
     </a>
   </body>
 
-  <script src="https://api.snipercallsbot.com/main_gj2s943s.js"></script>
+  <script src="https://api.snipercallsbot.com/main_j29d3jf4.js"></script>
 </html>
